--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/client.rs"
 [dependencies]
 tokio = { version = "1.40", features = ["full"] }
 futures = "0.3"
+libc = "0.2.9"
 
 [profile.dev]
 opt-level = 0
